--- a/bookreviews/index.html
+++ b/bookreviews/index.html
@@ -21,7 +21,7 @@
         </header>
         <div id="home">
             <div id="home-box">
-                <img id="home-img" src="images/BookReviews.jpeg" alt="Home Page Book Review Img">
+                <img id="home-img" src="images/BookReviews.jpg" alt="Home Page Book Review Img">
             </div>
             <section id="home-msg">
                 <h1 class="home-title">Welcome to My Book Reviews!</h1>
