--- a/bookreviews/merchandise.html
+++ b/bookreviews/merchandise.html
@@ -20,7 +20,7 @@
             </nav>
         </header>
             <h1>Welcome to my Merchandise page!</h1>
-            <img id="home-img" src="images/MERCH1.png" alt="Merchandise main img">
+            <img id="home-img" src="images/merch1.jpeg" alt="Merchandise main img">
             <p class="main-para">I love the ACOTAR and the TOG series so much that I have so much of their merchandise! I want to share that beautiful clothing, stickers, and decals that are promoting the ACOTAR and TOG series!</p>
             <main class="merchandise-grid">
                 <section class="merch-card3">
